# avrdude_windows_pypi

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: build-and-publish-to-pypi.yaml
avrdude_windows/avrdude_binaries/: README.md
